--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <h1>World regions</h1>
     <img src="assets/world_map.png" alt="Map of the world" class="world-map">
     <ul id="country-list"></ul>
+    <h2>Search <a href="search.html">here</a></h2>
 
 </main>
 
